--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,20 @@ spring.application.name=ms-persons
 server.port=8001
 
 #Conexion Base de Datos MySQL
-spring.datasource.url=jdbc:mysql://localhost/db_prueba_devsu?useSSL=false&Timezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=F3rr4rI.2020
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost/db_prueba_devsu?useSSL=false&Timezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=F3rr4rI.2020
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+#Conexion Base de Datos Postgresql
+spring.datasource.url=jdbc:postgresql://dpg-cvddit5ds78s7387k5r0-a.oregon-postgres.render.com/dbtestdevsu
+spring.datasource.username=adrius
+spring.datasource.password=3jCC4Nw2ssSk37xUNLaHqqqaXTcK8i7w
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
