--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=off
 
